fixed cta spacing

--- a/_includes/patterns/callout-box/callout-box.scss
+++ b/_includes/patterns/callout-box/callout-box.scss
@@ -65,3 +65,12 @@
     color: white;
     cursor: pointer;
 }
+.callout__container__inv{
+    width: 400px;
+}
+.callout__heading{
+    margin: auto;
+}
+.callout__inc__body{
+    margin: auto;
+}
